@@ -19,6 +19,7 @@
 
 <LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/linear_recipe_position_container"
   style="@style/Widget.Grocy.LinearLayout.ListItem.SingleLine.Clickable.More"
   android:orientation="vertical"
@@ -33,47 +34,65 @@
 
     <LinearLayout style="@style/Widget.Grocy.LinearLayout.ListItem.TextBox.Stretch">
 
-      <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-        <TextView
-          android:id="@+id/amount"
-          style="@style/Widget.Grocy.TextView.ListItem.Title"
-          android:layout_width="wrap_content"
-          android:layout_height="match_parent"
-          android:layout_gravity="center_vertical"
-          android:layout_marginEnd="8dp"
-          android:fontFamily="@font/jost_medium" />
-
-        <TextView
-          android:id="@+id/quantity_unit"
-          style="@style/Widget.Grocy.TextView.ListItem.Title"
-          android:layout_width="wrap_content"
-          android:layout_height="match_parent"
-          android:layout_gravity="center_vertical" />
-
-      </LinearLayout>
-
       <TextView
-        android:id="@+id/variable_amount"
-        style="@style/Widget.Grocy.TextView.ListItem.Description"
+        android:id="@+id/ingredient"
+        style="@style/Widget.Grocy.TextView.ListItem.Title"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:text="@string/property_variable_amount" />
+        android:layout_gravity="center_vertical" />
 
     </LinearLayout>
 
     <TextView
-      android:id="@+id/title"
-      style="@style/Widget.Grocy.TextView.ListItem.Title"
+      android:id="@+id/variable_amount"
+      style="@style/Widget.Grocy.TextView.ListItem.Description"
+      android:layout_width="wrap_content"
+      android:layout_height="match_parent"
+      android:layout_gravity="start"
+      android:layout_marginStart="12dp"
+      android:text="@string/property_variable_amount" />
+
+  </LinearLayout>
+
+  <LinearLayout
+    android:id="@+id/fulfillment"
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:orientation="vertical">
+
+    <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:gravity="end"
-      android:textAlignment="viewEnd"
-      android:maxLines="1" />
+      android:orientation="horizontal">
+
+      <TextView
+        android:id="@+id/fulfilled"
+        style="@style/Widget.Grocy.TextView.ListItem.Description"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:singleLine="false"
+        android:maxLines="2"
+        android:layout_weight="1" />
+
+      <ImageView
+        android:id="@+id/image_fulfillment"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        android:layout_gravity="center_vertical"
+        android:layout_marginStart="5dp"
+        android:visibility="visible"
+        tools:ignore="ContentDescription" />
+
+    </LinearLayout>
+
+    <TextView
+      android:id="@+id/missing"
+      style="@style/Widget.Grocy.TextView.ListItem.Description"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_gravity="center_vertical"
+      android:singleLine="false"
+      android:maxLines="5" />
 
   </LinearLayout>
 
@@ -83,6 +102,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="end"
-    android:textAlignment="viewEnd" />
+    android:textStyle="italic"/>
 
 </LinearLayout>
